--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
 		"@opennextjs/cloudflare": "1.14.0",
 		"next": "16.0.7",
 		"react": "19.2.1",
-		"react-dom": "19.2.1"
+		"react-dom": "19.2.1",
+		"bcryptjs": "2.4.3",
+		"jsonwebtoken": "9.0.0"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "3",
